--- a/ConsoleApp1/ConsoleApp1/Dockerfile
+++ b/ConsoleApp1/ConsoleApp1/Dockerfile
@@ -1,3 +1,5 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
-COPY F:\.NET PROJECT\ConsoleApp1\ConsoleApp1\bin\Release\net6.0\publish .
+FROM mcr.microsoft.com/dotnet/runtime:6.0
+
+COPY bin/Release/net6.0/publish .
+
 ENTRYPOINT ["dotnet", "ConsoleApp1.dll"]
