--- a/ConsoleApp1/ConsoleApp1/Jenkinsfile
+++ b/ConsoleApp1/ConsoleApp1/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline{
       
       stage("Docker Image Build"){
             steps{
-                  sh 'docker image build -t $JOB_NAME:v1.$BUILD_ID .'
+                  sh 'cd ConsoleApp1/ConsoleApp1 && docker image build -t $JOB_NAME:v1.$BUILD_ID .'
                   sh 'docker image tag $JOB_NAME:v1.$BUILD_ID dockersandheep/$JOB_NAME:v1.$BUILD_ID'
             }
             }
